changed the references

--- a/References.bib
+++ b/References.bib
@@ -54,73 +54,73 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{paper,
-    author    = "A. Kapoor, J. Pineda de Gyvez",
-    title     = "Architectural Analysis for Wirelessly Powered Computing Platforms",
-    journal   = "IEEE Transactions on very large scale integration (VLSI) systems",
-    %volume   = "",
-    %number   = "",
-    %pages    = "",
-    month     = "october",
-    year      = {2012},
-    %note     = "",
+    author    		= "A. Kapoor, J. Pineda de Gyvez",
+    title     		= "Architectural Analysis for Wirelessly Powered Computing Platforms",
+    journal   		= "IEEE Transactions on very large scale integration (VLSI) systems",
+    %volume  		= "",
+    %number  	= "",
+    %pages    	= "",
+    month     		= "October",
+    year      		= "2012",
+    %note     		= "",
 }
 
 @ONLINE{lecture,
-	author = {Doe, Ringo},
-	title = {This is a test entry of type {@ONLINE}},
-	month = jun,
-	year = {2009},
-	url = {http://www.test.org/doe/}
+	author 	= {R. Venkatesha Prasad},
+	title 		= {Internet of Things introduction lecture},
+	month 	= {September},
+	year 		= {2013},
+	url 		= {http://www.blackboard.tudelft.nl}
 }
 
 @misc{thingmagic,
-	author 			= {A. Zauner},
-	title 			= {{On Tour With RFID}},
-	month 			= aug,
-	year 			= {2012},
-	howpublished		= "\url{http://rfid.thingmagic.com/rfid-blog}",
+	author 		= "A. Zauner",
+	title 			= "On Tour With RFID",
+	month 		= "August",
+	year 			= "2012",
+	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog}",
 }
 
 @misc{wireless,
-	author 			= {Engineeringshock Electronics},
-	title 			= {{Wireless Power Transmitter and Receiver Set}},
-	month 			= aug,
-	year 			= {2013},
-	howpublished		= "\url{http://www.engineeringshock.com/wireless-power-transfer}",
+	author 		= "Engineeringshock Electronics",
+	title 			= "Wireless Power Transmitter and Receiver Set",  
+	month 		= "August",
+	year 			= "2013",
+	howpublished	= "\url{http://www.engineeringshock.com/wireless-power-transfer}",
 }
 
 @misc{sxsw,
-	author 			= {SXSW},
-	title 			= {{SXSW RFID Policy}},
-	month 			= aug,
-	year 			= {2012},
-	howpublished		= "\url{http://sxsw.com/rfid-policy}",
+	author 		= "SXSW Festival",
+	title 			= "SXSW RFID Policy",
+	month 		= "August",
+	year 			= "2012",
+	howpublished	= "\url{http://sxsw.com/rfid-policy}",
 }
 
-@ONLINE{coachella,
-	%author = {},
-	title = {2013 Wristband Registration},
-	%month = August,
-	year = 2013,
-	url = {http://www.coachella.com/festival-passes/about-wristbands}
+@misc{coachella,
+	author 		= "Coachella Festival",
+	title 			= "2013 Wristband Registration",
+	month 		= "August",
+	year 			= "2013",
+	howpublished	= "\url{http://www.coachella.com/festival-passes/about-wristbands}",
 }
 
-@ONLINE{bonnaroo,
-	%author = {},
-	title = {Bonnaroo 2013 Wristband Information},
-	%month = August,
-	year = 2013,
-	url = {http://www.bonnaroo.com/tickets/wristband-info/}
+@misc{bonnaroo,
+	author 		= "Bonnaroo festival",
+	title 			= "Bonnaroo 2013 Wristband Information",
+	month 		= "August",
+	year 			= "2013",
+	howpublished	= "\url{http://www.bonnaroo.com/tickets/wristband-info/}",
 }
 
 @article{IAmp,
-    author    = "",
-    title     = "ref still",
-    journal   = "",
-    %volume   = "",
-    %number   = "",
-    %pages    = "",
-    year      = "XXXX",
-    %month    = "",
-    %note     = "",
+    author    		= "M. Wasif",
+    title     		= "You still have to reference this",
+    journal   		= "",
+    %volume   	= "",
+    %number   	= "",
+    %pages    	= "",
+    year      		= "XXXX",
+    %month    	= "",
+    %note     		= "",
 }
