realize adjusted, fixed grammar erros and added an item

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -124,6 +124,9 @@ Imara Speek} % Author
 % clear application
 % startup-based idea
 
+\subsection{Scenario}
+\label{sec:scenario}
+\input{scenario}
 % short introduction to the scenario
 % how does this include the priorly introduced paper
 
