changed the set up of analysis to a better overview in the report file and changes grammar errors in the first part of analysis

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 11pt]{article}
+\documentclass[a4paper, 10pt]{article}
 
 %Handige usepackages voor essays
 %\usepackage[protrusion=true,expansion=true]{microtype}
@@ -137,7 +137,7 @@ Imara Speek} % Author
 % how will we achieve these goals --> decribe the set-up of the experiment
 % tip of the iceberg, include some formulas
 
-\subsection{Protocols concerning environmental impact features}
+\subsection{Protocols to account for a real-world application}
 \label{sec:proto}
 \input{proto}
 % an introduction to what we need to take into account when designing for this real-world example
@@ -145,9 +145,23 @@ Imara Speek} % Author
 % present Internet of Things ness
 
 %-----------------------------------------------
+
+% Maybe we still have to add why we choose these parts?
 \section{Analysis of the system design}
 \label{sec:analysis}
 \input{analysis}
+
+\subsection{Battery Life}
+\label{sec:battery}
+\input{batterylife}
+
+\subsection{Charging Profile}
+\label{sec:charging}
+\input{charging}
+
+\subsection{Charge to discharge ratio}
+\label{sec:chargedischarge}
+\input{chargedischarge}
 
 %---------------------------------------------
 \section{The proposed system design}
