--- a/References.bib
+++ b/References.bib
@@ -113,14 +113,18 @@
 	howpublished	= "\url{http://www.bonnaroo.com/tickets/wristband-info/}",
 }
 
-@article{IAmp,
-    author    		= "M. Wasif",
-    title     		= "You still have to reference this",
-    journal   		= "",
-    %volume   	= "",
-    %number   	= "",
-    %pages    	= "",
-    year      		= "XXXX",
-    %month    	= "",
-    %note     		= "",
+@misc{superbattery,
+	author 		= "Battery university",
+	title 			= "The Supercapacitor",
+	month 		= "October",
+	year 			= "2013",
+	howpublished	= "\url{http://batteryuniversity.com/learn/article/whats_the_role_of_the_supercapacitor}",
+}
+
+@misc{IAmp,
+	author 		= "IBT Power",
+	title 			= "Lithium ION technical data",
+	month 		= "October",
+	year 			= "2013",
+	howpublished	= "\url{http://www.ibt-power.com/Battery_packs/Li_Ion/Lithium_ion_tech.html}",
 }
