--- a/realize.tex
+++ b/realize.tex
@@ -5,7 +5,7 @@ Our major goal is to provide an efficient solution that best meets the challenge
 Those challenges include:
 \begin{enumerate}
 \item \emph{Charging the battery as fast as possible}.
-Batteries can store a large amount of charge. Unfortunately there is a limit to how fast a battery can be charged, which gets smaller with the size of the battery. Exceeding the charging current limit will deteriorate the battery's life and is more likely to happen when using smaller batteries as they have a lower charging current limit. To overcome this difficulty we propose adding a supercapacitor parallelly with a battery. The supercapacitor will function as a small buffer for charging the battery as it can hold a smaller amount of charge compared to the same size battery. Using a powerfull combination of a battery in parallel with a supercapacitor will offer a much faster charging cycle as supercapacitors are know to charge fast and will provide a robuster system for they have a longer cycle life \cite{IAmp}.
+Batteries can store a large amount of charge. Unfortunately there is a limit to how fast a battery can be charged, which gets smaller with the size of the battery. Exceeding the charging current limit will deteriorate the battery's life and is more likely to happen when using smaller batteries as they have a lower charging current limit. To overcome this difficulty we propose adding a supercapacitor parallelly with a battery. The supercapacitor will function as a small buffer for charging the battery as it can hold a smaller amount of charge compared to the same size battery. Using a powerfull combination of a battery in parallel with a supercapacitor will offer a much faster charging cycle as supercapacitors are know to charge fast and will provide a robuster system for they have a longer cycle life \cite{superbattery}, \cite{IAmp}.
 
 \item \emph{Ensuring a long battery life by creating a large charge to discharge ratio.}
 In our scenario we don't want the user to be waiting for a longer time than 15 minutes for the wristband to charge. This introduces the need to store as much charging current in short intervals as possible. Batteries have a relatively low cycle life, making them unfit to be frequently charged and discharged. By positioning a supercapacitor in parallel with the battery, it acts as a buffer to store a large amount of charging current. Sequentially the same supercapacitor can use this current to charge the battery with a slow pace. This ensures a longer battery life in terms of a large charge to discharge ratio. 
