--- a/scenario.tex
+++ b/scenario.tex
@@ -1,1 +1,3 @@
-Scenario
+%  Scenario of the system
+%
+Scenario's were developed to develop a charging protocol that accounts for all possible states. For these scenarios a user wearing a tranceiver wristband is considered. Other viewpoints for a scenario can be the user wearing a receiving wristband or the transmitting bar. However, these viewpoints are considerably easier to address and will implements parts of the protocol designed for a tranceiving system.
