reiteration of report setup

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -57,8 +57,8 @@
 \title{\textbf{Internet of Things }\\ % Title
 Developing an optimal wireless power transfer system for a real-world low power LED wristband application} % Subtitle
 
-\author{\textsc{Muhammad Wasif \\
-Imara Speek} % Author
+\author{\textsc{Muhammad Wasif xxxxxxx\\
+Imara Speek 1506374} % Author
 \\{\textit{Delft University of Technology}}} % Institution
 
 \date{\today} % Date
@@ -130,19 +130,32 @@ Imara Speek} % Author
 % short introduction to the scenario
 % how does this include the priorly introduced paper
 
-\subsection{Initial proposal of our wireless transfer system}
+\subsection{The wireless transfer system}
 \label{sec:realize}
 \input{realize}
 % what are our goals --> quick charging and long battery life,a final product, IoT element and some protocols and computing policies
 % how will we achieve these goals --> decribe the set-up of the experiment
 % tip of the iceberg, include some formulas
 
-\subsection{Protocols to account for a real-world application}
+\subsection{A real-world application}
+\input{realworld}
+% an introduction to what we need to take into account when designing for this real-world example
+
+\subsubsection{State analysis}
+\label{sec:state}
+\input{state}
+% show and explain the state diagrams
+
+\subsubsection{Protocols}
 \label{sec:proto}
 \input{proto}
-% an introduction to what we need to take into account when designing for this real-world example
-% include the state diagram
-% present Internet of Things ness
+% explain protocols required for the real-world analysis
+% input pseudocode
+
+\subsubsection{Initial design of the product}
+\label{indesign}
+\input{indesign}
+% an initial layout of the IC, the system and the exterior of the product
 
 %-----------------------------------------------
 
@@ -183,6 +196,12 @@ Imara Speek} % Author
 % presentation about the IoT
 % how should the protocols be included
 % schematic of the internet of things
+
+\subsection{The WiLight}
+\label{sec:WeLight}
+\input{welight}
+% Show the end product
+% present the solidworks model 
 
 %----------------------------------------------
 
