future works added

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -197,7 +197,7 @@ Imara Speek 1506374} % Author
 % how should the protocols be included
 % schematic of the internet of things
 
-\subsection{The WiLight}
+\subsection{The WeLight}
 \label{sec:WeLight}
 \input{welight}
 % Show the end product
@@ -234,6 +234,12 @@ Imara Speek 1506374} % Author
 % a critical analysis on our results
 % surprising lessons learned
 % some future guidelines
+
+\section{Future works}
+\label{future}
+\input{future}
+% what haven't we discussed yet
+% what can be done in the future
 
 %----------------------------------------------------------------------------------------
 %  BIBLIOGRAPHY
