first part scenario

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -123,6 +123,7 @@ Imara Speek 1506374} % Author
 % graded on very innovative idea,
 % clear application
 % startup-based idea
+% add some internet of things
 
 \subsection{Scenario}
 \label{sec:scenario}
@@ -171,6 +172,7 @@ Imara Speek 1506374} % Author
 \subsection{Charging Profile}
 \label{sec:charging}
 \input{charging}
+% add some info about the Vlimits
 
 \subsection{Charge to discharge ratio}
 \label{sec:chargedischarge}
