--- a/scenario.tex
+++ b/scenario.tex
@@ -1,3 +1,6 @@
 %  Scenario of the system
 %
-Scenario's were developed to develop a charging protocol that accounts for all possible states. For these scenarios a user wearing a tranceiver wristband is considered. Other viewpoints for a scenario can be the user wearing a receiving wristband or the transmitting bar. However, these viewpoints are considerably easier to address and will implements parts of the protocol designed for a tranceiving system.
+To create a thorough understanding of our system we developed some scenario's in which the product will be used. These scenario's helped us develop state diagrams to understand the internal states of the product so that we could determine protocols to develop an efficient charge-discharge protocol. The actors in the system are the user wearing the wristband, other users that the user can interact with and the system will be portrayed by the energy bar, energy checkpoints and an online server. The latter actors will be discussed more extensive in Section \ref{sec:internet}. The scenario's are portrayed from the perspective of a central user. The perspectives of the energy bar and checkpoint are considerable less complex and follow the perspective of the central user intuitively. 
+
+The use case diagram displays the interaction of a user, its friends and other users with the WeLight system. Concerning the wireless power transfer system a user can either charge of get charged by other users and should indicate when it is in need for energy. The product should also still execute its prior tasks which is executing the light show in certain areas where the shows are held. However its should only do this, when it is capable to do so in energy terms. These terms will be discussed more in detail in Section \ref{sec:state} and Section \ref{sec:charging}. The internet of things in our system is displayed by the check in mechanism and will be discussed more into detail in Section \ref{sec:internet}.
+
