--- a/indesign.tex
+++ b/indesign.tex
@@ -1,1 +1,4 @@
 show initial design of the product
+
+mention that there has to be some sort of thing that the user can initiate to start the show
+red light to indicate low battery has to be mentioned
