new scenario text

--- a/indesign.tex
+++ b/indesign.tex
@@ -2,3 +2,4 @@ show initial design of the product
 
 mention that there has to be some sort of thing that the user can initiate to start the show
 red light to indicate low battery has to be mentioned
+indicate that RF might not work, we don't focus on that
