prior, future and relatex added

--- a/future.tex
+++ b/future.tex
@@ -3,3 +3,7 @@ Say something about future work
 might need to find out if the radio frequency communication does not interfer with the charging and vice versa
 
 maybe they can introduce some kind of pattern recognition in where people are at the festival by checking the RFID tags. 
+
+
+The major technical challenge is to achieve large value for charge to discharge ratio, which means that during the charging cycle one has to provide large amount of wireless power. This can be achieved by using high power IC's that can with stand high currents without any failure. 
+Other challenges involve making the system compact enough so that it can fit in one wrist-band and increasing the distance between the wireless transceiver and receiver. Increasing the distance without losing significant efficiency would require a completely new technique in wireless power transmission which is still a hot topic of research. However, making the system compact can be achieved by taking extra care in selecting the components which may require exploring many different vendors.
