--- a/prior.tex
+++ b/prior.tex
@@ -1,5 +1,19 @@
-% prior knowledge and 
-%
-by size of the battery we refer to the capacity of the battery
+Since the technolological advancements in materials. The gap between supercapacitor and the conventional batterys for large charge storage is reducing. Supercapacitor can charge really fast and have much longer life as compared to battery. Hence it is much usefull to use a supercapacitor then a battery. However, supercapacitors with the same size as of battery can hold about 10 times less energy than a Li-ion battery. The table below givee some comparsion between suppercapacitor and a Li-ion battery. In order to get the best out of both, one can combine both in parallel. 
 
-supercapacitor vs battery
+%%%%%%%%%%%%%%%Table %%%%%%%%%%%%%%%%%
+
+
+
+\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} |l|l|l|}
+\hline
+Characteristic & Supercapacitor & Li-ion Battery \\
+\hline
+Charge time & 1–10 seconds & 10–60 minutes \\
+Cycle life & 1 million or 30,000h & 500 and higher \\
+Cell voltage & 2.3 to 2.75 Volts & 3.6 to 3.7 Volts \\
+Cost per Wh & Cost per Wh & $0.50-$1.00 (large system) \\
+\hline
+\end{tabular*}
+\begin{center}
+\textbf{ Table 1.} Comparison between Supercapacitor and a Battery \cite{superbattery}
+\end{center}
