--- a/related.tex
+++ b/related.tex
@@ -1,1 +1,7 @@
-related 
+In the related work \cite{paper} the authors provide a model only for one kind of wireless powered system. The system is assumed to have only one kind of power requirements that includes constant voltage levels, nothing about constant current or power. Furthermore each wireless power packet is assumed to carry constant power and is to be recieved periodically, the period of which is known in advance. Later the system is analysed and general trends related to the system parameters are shown in the form of graphs.
+
+In our wireless powered system, the system components immensly differ from the system purposed in the related work.
+A part from the small recitfier capacitor the system in the related work doesn't inlucde any storage device which makes the system useless in the absence of wireless power. Our system includes two big storage components, the supercapacitor and the battery, which can keep the system operational even in the absense of wireless power. Also, the related work made some unrealistic assumptions of the periodic reception of constant powered wirelees energy packets which led us to make completely different analytical model, disccused in section 5. 
+
+Consequently the related work only provides an intial guideline for wireless powered system, for more practical systems a completely new analytical model is required.      
+ 
