--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -117,7 +117,7 @@ Imara Speek 1506374} % Author
 
 %-----------------------------------------------
 
-\section{Description of the proposed idea}
+\section{Description of the idea}
 \label{sec:idea}
 \input{idea}
 % graded on very innovative idea,
@@ -208,7 +208,7 @@ Imara Speek 1506374} % Author
 %----------------------------------------------
 
 \section{Results}
-\label{sec:result}
+\label{sec:results}
 \input{results}
 % graded for a working demonstrator and fully operating system
 % idea evaluated against state of the art solutions
@@ -238,7 +238,7 @@ Imara Speek 1506374} % Author
 % some future guidelines
 
 \section{Future works}
-\label{future}
+\label{sec:future}
 \input{future}
 % what haven't we discussed yet
 % what can be done in the future
