--- a/References.bib
+++ b/References.bib
@@ -128,3 +128,11 @@
 	year 			= "2013",
 	howpublished	= "\url{http://www.ibt-power.com/Battery_packs/Li_Ion/Lithium_ion_tech.html}",
 }
+
+@misc{drome,
+	author 		= "Drome surround light",
+	title 			= "Drome LED",
+	month 		= "November",
+	year 			= "2013",
+	howpublished	= "\url{http://www.dromesurroundlight.com/}",
+}
