--- a/intro.tex
+++ b/intro.tex
@@ -1,1 +1,9 @@
-introduction
+% Something about the assignment
+% our interpretation
+% how can this be achieved
+% how can it be used right now, in a real world example
+% how are we contributing to this example
+%
+Although wireless power transfer systems are already widely applied in stationary household equipment, current research offers a tremendous amount of possibilities that can change our perception of energy usage. In an ideal world we would no longer have to concern about wires and depleting batteries. A collection of wireless power transmitters would be able to charge all our products wirelessly, enabling a completely mobile and energy independent workspace or living environment. This report will introduce a reusable mobile real-world low power application that utilizes a wireless power transfer system to eliminate the need for changing batteries. Introducing wireless power transfer techniques into the world of reusable high quality products will greatly reduce the environmental risks of the product and thus increase product value.
+
+In this report we will briefly discuss our choosen paper \cite{paper} and present a working product that extends the basic ideas discussed in the paper. As the paper itself did not discuss any \emph{Internet of Things} aspects to their idea, we present a scenario where both techniques could be fully utilized. The concurring product to match this scenario is based on the \emph{Drome Surround light} \cite{drome}. The drome is a LED wristband powered by a battery to be worn at concerts that enriches the involvement of the audience by including them into a lightshow and can run for 5 hours after it is switched on. The dromes can be reused after each show by replacing the batteries and this report will focus on eliminating this need. First we will focus on the choosen paper in Section \ref{sec:related} and some prior knowledge in Section \ref{sec:prior}. Section \ref{sec:idea} will discussed our start-up based idea in a scenario, initial wireless transfer system, a state analysis and the concurring protocols. Section \ref{sec:analysis} will go deeper into the system design by analyzing our electonic model, model the battery life, charging profile and the charge to discharge ratio. In Section \ref{sec:proposed} the proposed final system design and the internet of things will be discussed. We will conclude our results in Section \ref{sec:results} and present the conclusion and future works in Section \ref{sec:conclusion} and \ref{sec:future}.
