--- a/related.tex
+++ b/related.tex
@@ -1,5 +1,5 @@
 % related work 
-In the assigned paper \cite{paper}, the authors provide a model for a single kind of wireless powered system. The system only assumes power requirements that includes constant voltage levels, and do not include anything about constant current or power. Furthermore each wireless power packet is assumed to carry constant power and is to be recieved periodically, the period of which is known in advance. Later the system is analysed and general trends related to the system parameters are shown in the form of graphs.
+The assigned paper \cite{paper} presents an \emph{"Architectural analysis for wirelessly powered computing platforms"}. As we already discussed the downfalls of the paper thoroughly in class we will need go into too much details, but we will just present in what ways we extended the proposed idea in the paper. The authors of the paper provide a model for a single kind of wireless powered system. However, the system only assumes power requirements that includes constant voltage levels and do not include anything about constant current or power. Furthermore each wireless power packet is assumed to carry constant power and is recieved periodically while the period is known in advance. 
 
-In our wireless powered system, the system components immensly differ from the system purposed in the related work. Except for the small rectifier capacitor the system in the related work doesn't inlcude any storage device which makes the system useless in the absence of wireless power. Our system includes the supercapacitor and the battery as two big storage components which can keep the system operational even in the absense of wireless power. Also, the related work made some unrealistic assumptions of the periodic reception of constant powered wireless energy packets which led us to make a completely different analytical model, disccused in Section 5. Consequently the related work only provides an intial guideline for wireless powered system, for more practical systems a completely new analytical model is required.      
+In our wireless powered system, the system components immensly differ from the system proposed in the related work. The system in the related work does not include any storage device apart from the small rectifying capacitor, which makes the system useless in the absence of wireless power. For this reason we included a supercapacitor and a battery and two main big storage components which can keep the system operational even in the absence of wireless power. Also, the related work made some unrealistic assumptions of the periodic reception of constant powered wireless energy packets which led us to make a completely different analytical model as disccused in Section 5. Consequently the related work only provides an intial guideline for wireless powered system, for more practical systems a completely new analytical model is required.      
  
