adjusted prior.tex

--- a/prior.tex
+++ b/prior.tex
@@ -1,9 +1,7 @@
-Since the technolological advancements in materials. The gap between supercapacitor and the conventional batterys for large charge storage is reducing. Supercapacitor can charge really fast and have much longer life as compared to battery. Hence it is much usefull to use a supercapacitor then a battery. However, supercapacitors with the same size as of battery can hold about 10 times less energy than a Li-ion battery. The table below givee some comparsion between suppercapacitor and a Li-ion battery. In order to get the best out of both, one can combine both in parallel. 
-
-%%%%%%%%%%%%%%%Table %%%%%%%%%%%%%%%%%
-
-
-
+Because of technolological advancements in materials, the gap between \emph{supercapacitors} and the conventional \emph{batteries} for large charge storage is reducing. Supercapacitors can charge really fast and have a much longer cycle life compared to batteries. Hence supercapacitors are increasing in importance and are slowly becoming a competitor to batteries. However, supercapacitors can hold about 10 times less energy than a Li-ion battery of the same size. The table below gives an overview of the important aspects of the supercapacitor and the battery we took into account during this project. As performance is always a trade-off we ended up combining a supercapacitor with a battery as will be discussed more into detail in Section \ref{sec:analysis}. 
+\\
+\\
+%-----------------------Table ----------------------------------------
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} |l|l|l|}
 \hline
 Characteristic & Supercapacitor & Li-ion Battery \\
@@ -15,5 +13,5 @@ Cost per Wh & Cost per Wh & $0.50-$1.00 (large system) \\
 \hline
 \end{tabular*}
 \begin{center}
-\textbf{ Table 1.} Comparison between Supercapacitor and a Battery \cite{superbattery}
+\textbf{ Table 1.} Comparison between a supercapacitor and a battery \cite{superbattery}
 \end{center}
