--- a/idea.tex
+++ b/idea.tex
@@ -1,3 +1,5 @@
-decription idea
-start up based product
-add some internet of things
+%decription idea
+%start up based product
+%add some internet of things
+%
+The idea for our project was to utilize a wireless power transfer system to eliminate the need for changing batteries. However as the scenario depicted in Section \ref{sec:scenario} will display, the charging should happen in a quick and intuitive manner. In this section we will discuss different scenarios, use state diagrams to visually design and discover internal logic of the system and we will introduce some protocols that can handle the system logic. 
