--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -138,22 +138,18 @@ Imara Speek 1506374} % Author
 % how will we achieve these goals --> decribe the set-up of the experiment
 % tip of the iceberg, include some formulas
 
-\subsection{A real-world application}
-\input{realworld}
-% an introduction to what we need to take into account when designing for this real-world example
-
-\subsubsection{State analysis}
+\subsection{State analysis}
 \label{sec:state}
 \input{state}
 % show and explain the state diagrams
 
-\subsubsection{Protocols}
+\subsection{Protocols}
 \label{sec:proto}
 \input{proto}
 % explain protocols required for the real-world analysis
 % input pseudocode
 
-\subsubsection{Initial design of the product}
+\subsection{Initial design of the product}
 \label{indesign}
 \input{indesign}
 % an initial layout of the IC, the system and the exterior of the product
