--- a/References.bib
+++ b/References.bib
@@ -73,6 +73,14 @@
 	url 		= {http://www.blackboard.tudelft.nl}
 }
 
+@misc{promini,
+	author 		= "Arduino",
+	title 			= "Arduino Pro Mini",
+	month 		= "November",
+	year 			= "2013",
+	howpublished	= "\url{http://www.arduino.cc/en/Guide/ArduinoProMini}",
+}
+
 @misc{thingmagic,
 	author 		= "A. Zauner",
 	title 			= "On Tour With RFID",
