--- a/proto.tex
+++ b/proto.tex
@@ -1,6 +1,10 @@
-% Another state, V full, V full enough, V starving and V dead.
+%
+Charging protocols have to be designed to account for the state translations described in Section \ref{sec:states}. We considered three possible energy charging scenarios: an infinite network like design where all nodes should stay alive, a hop-to-hop spread of energy that uses inter-module detecting or charge requests or an interactive behavior to selectively share energy. To stimulate interaction through this application we choose to apply a scenario where a user can choose to act upon energy requests and share with friends, or strangers. This is the best suiting approach considering the environment of a festival where you can meet new people and can "share the love". 
 
-A charging protocol has to be designed to account for these combinations. We considered three possibilities: an infinite network like design, a hop-to-hop spread of energy or an interactive behavior to selectively share energy. To stimulate interaction through this application we choose to apply a scenario where a user can choose to act upon energy requests and share with friends, or strangers.
-% add reason why we choose this protocol
+Based on figure \ref{fig:states} we can determine all the possible state translation and the concurring protocols that are required. In this section we will generate pseudocode for the application that can be translated onto environment for an IC. For the IC we decided to choose the \emph{Arduino Pro Mini} \cite{promini}, a flexible small microcontroller for the arduino environment. For the real-world application we can fit the arduino in a relative small wristband.  As the recognitions of the RFID tag that is included in the internet of things part is a passive component of the wristband, it is not included into the code. 
+\\
+\lstinputlisting{ICiot/ICiot.ino}
+%\lstinputlisting{pseudo.c}
 
-To handle these protocols, an IC has to be added. This way whenever the battery reached $V_{starve}$ it will send out a request for energy visually by litting a red LED embedded in the wristband. Neighbouring nodes can then choose to react on this or save their own energy. Whenever the battery dies, the user either has to verbally ask for energy or visit an energy bar.
+
+%To handle these protocols, an IC has to be added. This way whenever the battery reached $V_{starve}$ it will send out a request for energy visually by litting a red LED embedded in the wristband. Neighbouring nodes can then choose to react on this or save their own energy. Whenever the battery dies, the user either has to verbally ask for energy or visit an energy bar.
