--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -94,12 +94,12 @@ Imara Speek 1506374} % Author
 
 %\renewcommand{\abstractname}{Summary} % Uncomment to change the name of the abstract to something else
 
-\begin{abstract}
-\end{abstract}
-
-\hspace*{3,6mm}\textit{Keywords:} Wireless power transfer, low power, real-world application % Keywords
-
-\vspace{30pt} % Some vertical space between the abstract and first section
+%\begin{abstract}
+%\end{abstract}
+%
+%\hspace*{3,6mm}\textit{Keywords:} Wireless power transfer, low power, real-world application % Keywords
+%
+%\vspace{30pt} % Some vertical space between the abstract and first section
 
 %----------------------------------------------------------------------------------------
 %  ESSAY BODY
